feat(doc): #2994.202 add refs to some rules
- Added ASVS references to R317, R331, R315, R313, R189 and R310
- Added CWE reference to R317
- Fixed some minor typos


Former-commit-id: e2a2239b35ab57bc173c99ad82d7296e4798578b

--- a/content/pages/rules/legal/331/index.adoc
+++ b/content/pages/rules/legal/331/index.adoc
@@ -38,3 +38,9 @@ information, or data assessed likely to be subject to EU's GDPR.
 V7.1 Log Content Requirements.(1.7.2)]
 Verify that the application does not log other sensitive data as defined under
 local privacy laws or relevant security policy.
+
+. [[r5]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V8.3 Sensitive Private Data.(8.3.4)]
+Verify that all sensitive data created and processed by the application has
+been identified,
+and ensure that a policy is in place on how to deal with sensitive data.
