--- a/content/pages/rules/privacy/189/index.adoc
+++ b/content/pages/rules/privacy/189/index.adoc
@@ -75,3 +75,9 @@ subject concerned or some other legitimate basis.
 Where processing is carried out in accordance with a legal obligation to which
 the controller is subject, the processing should have a basis in Union or
 Member State law.
+
+. [[r9]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V8.3 Sensitive Private Data.(8.3.3)]
+Verify that users are provided clear language regarding collection and use of
+supplied personal information and that users have provided opt-in consent for
+the use of that data before it is used in any way.
