--- a/content/pages/rules/privacy/313/index.adoc
+++ b/content/pages/rules/privacy/313/index.adoc
@@ -33,3 +33,9 @@ Where the controller is able to demonstrate that it is not in a position to
 identify the data subject,
 the controller shall inform the data subject accordingly,
 if possible.
+
+. [[r2]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V8.3 Sensitive Private Data.(8.3.4)]
+Verify that all sensitive data created and processed by the application has
+been identified,
+and ensure that a policy is in place on how to deal with sensitive data.
