feat(doc): #2994.203 add refs to some rules
- Added ASVS references to R075, R083, R185 and R224
- Added CWE references to R146
- Updated old ASVS references in R146, R214 and R183
- Updated R146 and R214 keywords
- Fixed the content of a reference in R183
- Removed R202 as it was a duplicate of R183


Former-commit-id: 728328886ec8178f627830f0c575c7750143d4e6

--- a/content/pages/rules/cryptography/224/index.adoc
+++ b/content/pages/rules/cryptography/224/index.adoc
@@ -115,3 +115,9 @@ Verify that all random numbers, random file names, random **GUID**s, and random
 strings are generated using the cryptographic module's approved
 cryptographically secure random number generator when these random values are
 intended to be not guessable by an attacker.
+
+. [[r18]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V8.3 Sensitive Private Data.(8.3.7)]
+Verify that sensitive or private information that is required to be encrypted,
+is encrypted using approved algorithms that provide both confidentiality and
+integrity.
