--- a/content/pages/rules/data/183/index.adoc
+++ b/content/pages/rules/data/183/index.adoc
@@ -1,7 +1,7 @@
 :slug: rules/183/
 :category: data
 :description: This requirement establishes the importance of securely removing sensitive data when it is no longer required in order to avoid information leakages.
-:keywords: Security, Data, Removal, Information, ASVS, GDPR, Ethical Hacking, Pentesting
+:keywords: Sensitive, Data, Removal, Information, ASVS, GDPR, Ethical Hacking, Pentesting
 :rules: yes
 
 = R183. Delete sensitive data securely
@@ -27,8 +27,10 @@ from being recovered.
 == References
 
 . [[r1]] link:https://cwe.mitre.org/data/definitions/226.html[CWE-226: Sensitive Information Uncleared in Resource Before Release for Reuse].
-The software generates an error message that includes sensitive information
-about its environment, users, or associated data.
+The product prepares to release a resource such as memory or a file so that the
+resource can be reused by other entities,
+but the product does not fully clear previously-used sensitive information from
+that resource before the resource is released.
 
 . [[r2]] link:https://cwe.mitre.org/data/definitions/459.html[CWE-459: Incomplete Cleanup].
 The software does not properly "clean up" and remove temporary or supporting
@@ -53,15 +55,6 @@ Personal data shall be kept in a form which permits identification of data
 subjects for no longer than is necessary for the purposes for which the
 personal data are processed.
 
-. [[r6]] link:https://www.owasp.org/index.php/ASVS_V9_Data_Protection[OWASP-ASVS v3.1-9.6]
-Verify that there is a method to remove each type of sensitive data
-from the application at the end of the required retention policy.
-
-. [[r7]] link:https://www.owasp.org/index.php/ASVS_V9_Data_Protection[OWASP-ASVS v3.1-9.11]
-Verify that sensitive information maintained in memory
-is overwritten with zeros as soon as it is no longer required,
-to mitigate memory dumping attacks.
-
 . [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
 V8.1 General Data Protection.(8.1.2)]
 Verify that all cached or temporary copies of sensitive data stored on the
@@ -72,3 +65,16 @@ authorized user accesses the sensitive data.
 V8.2 Client-side Data Protection.(8.2.3)]
 Verify that authenticated data is cleared from client storage,
 such as the browser *DOM*, after the client or session is terminated.
+
+. [[r10]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V8.3 Sensitive Private Data.(8.3.6)]
+Verify that sensitive information contained in memory is overwritten as soon as
+it is no longer required to mitigate memory dumping attacks,
+using zeros or random data.
+
+. [[r11]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V8.3 Sensitive Private Data.(8.3.8)]
+Verify that sensitive personal information is subject to data retention
+classification,
+such that old or out of date data is deleted automatically, on a schedule,
+or as the situation requires.
