--- a/content/pages/rules/data/185/index.adoc
+++ b/content/pages/rules/data/185/index.adoc
@@ -66,3 +66,9 @@ V6.1 Data Classification.(6.1.3)]
 Verify that regulated financial data is stored encrypted while at rest,
 such as financial accounts, defaults or credit history, tax records,
 pay history, beneficiaries, or de-anonymized market or research records.
+
+. [[r8]] link:https://owasp.org/www-project-application-security-verification-standard/[OWASP-ASVS v4.0.1
+V8.3 Sensitive Private Data.(8.3.7)]
+Verify that sensitive or private information that is required to be encrypted,
+is encrypted using approved algorithms that provide both confidentiality and
+integrity.
